--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #
 
 # Site settings
-title: Protected Utility
+title: Portal Technology Compliance Test Site
 description: > # this means to ignore newlines until "baseurl:"
   
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/testcompliancehosting" # the subpath of your site, e.g. /blog
 
 markdown: kramdown
 
