--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: Portal Technology Compliance Test Site
 description: > # this means to ignore newlines until "baseurl:"
   
-baseurl: "/testcompliancehosting" # the subpath of your site, e.g. /blog
+baseurl: "testcompliancehosting" # the subpath of your site, e.g. /blog
 
 markdown: kramdown
 
