--- a/_data/abac-navigation.yml
+++ b/_data/abac-navigation.yml
@@ -1,42 +1,42 @@
 - title: As Built As Configured
-  url: /blueprint/abac.html
+  url: blueprint/abac.html
 
   subitems:
     - title: Conditional access policies
-      url: /blueprint/abac/conditional-access-policies.html
+      url: blueprint/abac/conditional-access-policies.html
 
     - title: Intune applications
-      url: /blueprint/abac/intune-applications.html
+      url: blueprint/abac/intune-applications.html
 
     - title: Intune compliance
-      url: /blueprint/abac/intune-compliance.html
+      url: blueprint/abac/intune-compliance.html
 
     - title: Intune configuration
-      url: /blueprint/abac/intune-configuration.html
+      url: blueprint/abac/intune-configuration.html
 
     - title: Intune enrolment
-      url: /blueprint/abac/intune-enrolment.html
+      url: blueprint/abac/intune-enrolment.html
 
     - title: Intune software updates
-      url: /blueprint/abac/intune-software-updates.html
+      url: blueprint/abac/intune-software-updates.html
 
     - title: Office 365
-      url: /blueprint/abac/office-365.html
+      url: blueprint/abac/office-365.html
 
     - title: Platform
-      url: /blueprint/abac/platform.html
+      url: blueprint/abac/platform.html
 
     - title: Hybrid - task sequence deploy
-      url: /blueprint/abac/hybrid-task-sequence.html
+      url: blueprint/abac/hybrid-task-sequence.html
     
     - title: Hybrid - network configuration
-      url: /blueprint/abac/hybrid-network-configuration.html
+      url: blueprint/abac/hybrid-network-configuration.html
 
     - title: Administration - disable inactive accounts automation
-      url: /blueprint/abac/admin-disable-inactive-users.html
+      url: blueprint/abac/admin-disable-inactive-users.html
 
     - title: WDAC policy creation
-      url: /blueprint/abac/wdac-policy-creation.html
+      url: blueprint/abac/wdac-policy-creation.html
 
     - title: Windows Firewall rules import
-      url: /blueprint/abac/wfw-rules-import.html
+      url: blueprint/abac/wfw-rules-import.html
