--- a/_data/features.yml
+++ b/_data/features.yml
@@ -1,13 +1,13 @@
 - name: About
-  url: /about/index.html
+  url: about/index.html
   desc: |
     An overview of the Protected Utility.
 - name: Access the blueprint
-  url: /blueprint/index.html
+  url: blueprint/index.html
   desc: |
     The blueprint is a design for a secure, modern desktop based on Microsoft 365.
 - name: How you can implement the blueprint
-  url: /about/business-change-guide.html
+  url: about/business-change-guide.html
   desc: |
     We have published a guide based on agencies who have implemented the blueprint. You can use this to support your business change program.
 - name: Help us improve the blueprint
