--- a/_data/main-navigation.yml
+++ b/_data/main-navigation.yml
@@ -1,52 +1,52 @@
 - title: About
-  url: about/index.html
+  url: /about/index.html
 
   subitems:
     - title: Business change guide
-      url: about/business-change-guide.html
+      url: /about/business-change-guide.html
     
     - title: Case study
-      url: about/case-study.html
+      url: /about/case-study.html
 
     - title: Operations model
-      url: about/operations-model.html
+      url: /about/operations-model.html
 
     - title: User personas
-      url: about/personas.html
+      url: /about/personas.html
 
     - title: FAQs
-      url: about/faqs.html
+      url: /about/faqs.html
     
 - title: Blueprint
-  url: blueprint/index.html
+  url: /blueprint/index.html
   
   subitems:
     - title: Solution overview
-      url: blueprint/overview.html
+      url: /blueprint/overview.html
     
     - title: Essential Eight maturity
-      url: blueprint/essential-eight-maturity.html
+      url: /blueprint/essential-eight-maturity.html
 
     - title: Platform
-      url: blueprint/platform.html
+      url: /blueprint/platform.html
 
     - title: Office 365
-      url: blueprint/office-365.html
+      url: /blueprint/office-365.html
 
     - title: Client devices
-      url: blueprint/client-devices.html
+      url: /blueprint/client-devices.html
 
     - title: As Built As Configured
-      url: blueprint/abac.html
+      url: /blueprint/abac.html
     
     - title: Security
-      url: blueprint/security.html 
+      url: /blueprint/security.html 
 
     - title: Automation
-      url: blueprint/automation.html 
+      url: /blueprint/automation.html 
 
     - title: Abbreviations and Acronyms
-      url: blueprint/abbr-acronyms.html 
+      url: /blueprint/abbr-acronyms.html 
 
 - title: Patterns
-  url: patterns/index.html
+  url: /patterns/index.html
